--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wellcome to Regalos Oficial web</title>
+    <script src="/Style/style.css"></script>
 </head>
 <body>
     <header>
