--- a/pages/index.html
+++ b/pages/index.html
@@ -4,28 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wellcome to Regalos Oficial web</title>
-    <script src="/Style/style.css"></script>
+    <link rel="stylesheet" href="/Style/style.css">
 </head>
 <body>
     <header>
-        <div class="menu comntainer">
-            <a href="index.html">bcuebfb</a>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="#">Catalogo</a></li>
-                    <li><a href="#">Quienes somos</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Iniciar sesion</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="header-content container">
-            <h1>Regalos apra todos</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ullam nostrum dolor iure dignissimos. 
-                Dolor animi excepturi deleniti saepe itaque obcaecati sunt a recusandae fugiat, dignissimos expedita doloribus  
-                eque doloremque.
-            </p>
-            <a href="" class="btn-1"></a>
+        <div class="menu-container">
+            <div class="logo-container">
+                <a href="index.html"><img src="/public/logo.svg" alt=""></a>
+            </div>
+            <div class="enlaces-container">
+                <div class="enlace"><a href="">Quienes Somos</a></div>
+                <div class="enlace"><a href="">Contacto</a></div>
+                <div class="enlace"><a href="">Cátalogo</a></div>
+                <div class="enlace"><a href="">Iniciar Sesión</a></div>
+            </div>
         </div>
     </header>
 </body>
