--- a/pages/index.html
+++ b/pages/index.html
@@ -13,10 +13,10 @@
                 <a href="index.html"><img src="/public/logo.svg" alt=""></a>
             </div>
             <div class="enlaces-container">
-                <div class="enlace"><a href="">Quienes Somos</a></div>
-                <div class="enlace"><a href="">Contacto</a></div>
-                <div class="enlace"><a href="">Cátalogo</a></div>
-                <div class="enlace"><a href="">Iniciar Sesión</a></div>
+                <a href="">Quiénes Somos</a>
+                <a href="">Contacto</a>
+                <a href="">Catálogo</a>
+                <a href="">Iniciar Sesión</a>
             </div>
         </div>
     </header>
