--- a/pages/index.html
+++ b/pages/index.html
@@ -3,22 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wellcome to Regalos Oficial web</title>
-    <link rel="stylesheet" href="/Style/style.css">
+    <title>Wellcome to Regalos </title>
+    <link rel="icon" href="/public/icon.svg">
+    <link rel="stylesheet" href="/Style/headerstyle.css">
+    <link rel="stylesheet" href="/Style/IndexBodyStyle.css">
+    <link rel="stylesheet" href="/Style/">
 </head>
 <body>
     <header>
         <div class="menu-container">
             <div class="logo-container">
-                <a href="index.html"><img src="/public/logo.svg" alt=""></a>
+                <a href="/pages/index.html"><img src="/public/logo.svg" alt=""></a>
             </div>
             <div class="enlaces-container">
                 <a href="">Quiénes Somos</a>
                 <a href="">Contacto</a>
                 <a href="">Catálogo</a>
-                <a href="">Iniciar Sesión</a>
+                <a href="/pages/login.html">Iniciar Sesión</a>
             </div>
         </div>
     </header>
+    <section>
+        <div class="aside-container">
+            <a href="">Peluches</a>
+            <a href="">Cosméticos</a>
+            <a href="">Accesorios</a>
+            <a href="">Flores</a>
+        </div>
+        <div class="imginfo-container">
+            
+        </div>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
