--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iniciar Sesión </title>
+    <link rel="icon" href="/public/icon.svg">
+    <link rel="stylesheet" href="/Style/headerstyle.css">
 </head>
 <body>
     <header>
@@ -15,7 +17,7 @@
                 <a href="">Quiénes Somos</a>
                 <a href="">Contacto</a>
                 <a href="">Catálogo</a>
-                <a href="">Iniciar Sesión</a>
+                <a href="/pages/newUser.html">Registrarse</a>
             </div>
         </div>
     </header>
