--- a/pages/newUser.html
+++ b/pages/newUser.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registrarse</title>
+    <link rel="icon" href="/public/icon.svg">
+    <link rel="stylesheet" href="/Style/headerstyle.css">
 </head>
 <body>
     <header>
