--- a/pages/index.html
+++ b/pages/index.html
@@ -31,8 +31,17 @@
             <a href="">Flores</a>
         </div>
         <div class="imginfo-container">
-            
+            <div class="info-container">
+                <h1>Bienvenido a tu Página de Regalos Favorita</h1>
+                <div class="text-container"><p>Todo lo que necesitas para ese regalo perfecto está al alcance de tu mano, somos los mejores en el mercado, ofrecemos calidad y profesionalismo.</p>
+                    <p>Si aun no cuentas con una cuenta Registarte con nosotros para comenzar a comprar</p>
+                </div>
+                    <a href="/pages/newUser.html">Registrarse</a>
+            </div>
         </div>
+    </section>
+    <section class="general">
+        
     </section>
     <footer>
 
