--- a/pages/login.html
+++ b/pages/login.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="/public/icon.svg">
     <link rel="stylesheet" href="/Style/headerstyle.css">
     <link rel="stylesheet" href="/Style/FormLogStyle.css">
+    <link rel="stylesheet" href="/Style/FormStyle.css">
 </head>
 
 <body>
