--- a/pages/login.html
+++ b/pages/login.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="/public/icon.svg">
     <link rel="stylesheet" href="/Style/headerstyle.css">
     <link rel="stylesheet" href="/Style/FormLogStyle.css">
-    <link rel="stylesheet" href="/Style/FormStyle.css">
 </head>
 
 <body>
@@ -30,45 +29,43 @@
             <div class="form-container">
                 <h1>Inicio de Sesión</h1>
                 <form action="" class="formulario" id="formulario">
-                    <div class="formulario-grupo" id="grupo-usuario">
-                        <label for="usuario" class="formulario-label">Usuario</label>
+                    <!-- Grupo: Usuario -->
+                    <div class="formulario__grupo" id="grupo__usuario">
+                        <label for="usuario" class="formulario__label">Usuario</label>
                         <div class="formulario__grupo-input">
-                            <input type="text" class="formulario__input" name="Usuario" id="Usuario"
-                                placeholder="Ingrese su Nombre de Usuario">
-                            <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+                            <input type="text" class="formulario__input" name="usuario" id="usuario" placeholder="Ingrese su Usuario">
+                            <i class="formulario__validacion-estado fas fa-times-circle"></i>
                         </div>
-                        <p class="formulario__input-error">El usuario tiene que ser de 4 a 16 digitos</p>
+                        <p class="formulario__input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener numeros, letras y guion bajo.</p>
                     </div>
-                    <div class="formulario-grupo" id="grupo-password">
-                        <label for="password" class="formulario-label">Contraseña</label>
+                    <!-- Grupo: Contraseña -->
+                    <div class="formulario__grupo" id="grupo__password">
+                        <label for="password" class="formulario__label">Contraseña</label>
                         <div class="formulario__grupo-input">
-                            <input type="password" class="formulario__input" name="password" id="password"
-                                placeholder="Ingrese su Contraseña">
-                            <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+                            <input type="password" class="formulario__input" name="password" id="password" placeholder="Ingrese su Contraseña">
+                            <i class="formulario__validacion-estado fas fa-times-circle"></i>
                         </div>
-                        <p class="formulario__input-error">La contraseña debe tener minimo 5 digitos</p>
+                        <p class="formulario__input-error">La contraseña tiene que ser de 4 a 12 dígitos.</p>
                     </div>
-                    <div class="formulario-grupo" id="grupo-password2">
-                        <label for="password2" class="formulario-label">Confirmar Contraseña</label>
+                    <!-- Grupo: Contraseña 2 -->
+                    <div class="formulario__grupo" id="grupo__password2">
+                        <label for="password2" class="formulario__label">Repetir Contraseña</label>
                         <div class="formulario__grupo-input">
-                            <input type="password" class="formulario__input" name="password2" id="password2"
-                                placeholder="Confirme su Contraseña">
-                            <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
+                            <input type="password" class="formulario__input" name="password2" id="password2" placeholder="Confirme su Contraseña">
+                            <i class="formulario__validacion-estado fas fa-times-circle"></i>
                         </div>
-                        <p class="formulario__input-error">Las contraseñas no coinciden</p>
+                        <p class="formulario__input-error">Ambas contraseñas deben ser iguales.</p>
                     </div>
                     <div class="formulario__mensaje" id="formulario__mensaje">
-                        <p><i class="fa-solid fa-triangle-exclamation"></i><b>Error: </b> Por favor rellena el
-                            formulario correctamente.</p>
+                        <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
                     </div>
-                    <div class="formulario-grupo formulario-grupo-btn-enviar">
+                    <div class="formulario__grupo formulario__grupo-btn-enviar">
                         <button type="submit" class="formulario__btn">Enviar</button>
-                        <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente</p>
+                        <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
                     </div>
                 </form>
             </div>
             <div class="img-container">
-                <img src="" alt="">
             </div>
         </div>
     </section>
