--- a/pages/newUser.html
+++ b/pages/newUser.html
@@ -108,6 +108,7 @@
             </form>
         </div>
     </section>
+    <script src="/source/Log.js"></script>
     <script src="https://kit.fontawesome.com/8399832daf.js" crossorigin="anonymous"></script>
 </body>
 </html>
