--- a/pages/login.html
+++ b/pages/login.html
@@ -69,6 +69,7 @@
             </div>
         </div>
     </section>
+    <script src="/source/Log.js"></script>
     <script src="https://kit.fontawesome.com/8399832daf.js" crossorigin="anonymous"></script>
 </body>
 
