--- a/pages/index.html
+++ b/pages/index.html
@@ -16,19 +16,19 @@
                 <a href="/pages/index.html"><img src="/public/logo.svg" alt=""></a>
             </div>
             <div class="enlaces-container">
-                <a href="">Quiénes Somos</a>
-                <a href="">Contacto</a>
-                <a href="">Catálogo</a>
+                <a href="warning.html">Quiénes Somos</a>
+                <a href="warning.html">Contacto</a>
+                <a href="warning.html">Catálogo</a>
                 <a href="/pages/login.html">Iniciar Sesión</a>
             </div>
         </div>
     </header>
     <section>
         <div class="aside-container">
-            <a href="">Peluches</a>
-            <a href="">Cosméticos</a>
-            <a href="">Accesorios</a>
-            <a href="">Flores</a>
+            <a href="warning.html">Peluches</a>
+            <a href="warning.html">Cosméticos</a>
+            <a href="warning.html">Accesorios</a>
+            <a href="warning.html">Flores</a>
         </div>
         <div class="imginfo-container">
             <div class="info-container">
