--- a/pages/newUser.html
+++ b/pages/newUser.html
@@ -15,9 +15,9 @@
                 <a href="index.html"><img src="/public/logo.svg" alt=""></a>
             </div>
             <div class="enlaces-container">
-                <a href="">Quiénes Somos</a>
-                <a href="">Contacto</a>
-                <a href="">Catálogo</a>
+                <a href="warning.html">Quiénes Somos</a>
+                <a href="warning.html">Contacto</a>
+                <a href="warning.html">Catálogo</a>
                 <a href="/pages/login.html">Iniciar Sesión</a>
             </div>
         </div>
